# plover-touch-tablets

./: .gitignore  README.md  pyproject.toml
plover_my_minimal_tool/: client_config.py  config.py  debug.py  extended_engine.py  extension.py  get_logger.py  lookup.py  signal.py  tool.py
plover_touch_tablets/: client_config.py  config.py  extended_engine.py  extension.py  tool.py
tests/: test_me.py
touch_tablets/: client_config.py  config.py  encoding.py  extended_engine.py  extension.py  tool.py
